--- a/src/app/modules/todo/todo.component.scss
+++ b/src/app/modules/todo/todo.component.scss
@@ -29,11 +29,11 @@
     }
   }
 
-  &__main {
-    background: var(--color-white);
+  &__card {
+    background: var(--card-background-color);
     margin-top: rem(24);
     border-radius: rem(5);
-    box-shadow: 0px 5px 10px -2px var(--color-grayish-blue-300);
+    box-shadow: 0px 8px 16px -2px var(--card-shadow-color);
 
     @include desktop-sm {
       width: 50%;
@@ -52,13 +52,18 @@
     justify-content: space-between;
 
     padding: rem(20) rem(24);
-    border-bottom: 1px solid var(--color-grayish-blue-200);
+    border-bottom: 1px solid var(--card-border-color);
 
     cursor: pointer;
 
     &__checkbox {
       display: flex;
       gap: rem(45);
+    }
+
+    .item-completed {
+      text-decoration: line-through;
+      color: var(--item-checked);
     }
   }
 
@@ -80,7 +85,7 @@
   &__info {
     padding: rem(20) rem(24);
     font-size: rem(14);
-    color: var(--color-grayish-blue-400);
+    color: var(--filter-text-color);
 
     display: flex;
     align-items: center;
@@ -97,28 +102,28 @@
     transition: all 0.3s;
 
     &:hover {
-      color: var(--color-grayish-blue-800);
+      color: var(--filter-hover-color);
     }
   }
 
   &__filter {
-    &-group {
-      margin-top: 1rem;
-      border-radius: rem(5);
-      padding: rem(20) rem(24);
-      background: var(--color-white);
-      box-shadow: 0px 2px 10px -2px var(--color-grayish-blue-300);
-
-      @include desktop-sm {
-        display: none;
-      }
-    }
-
     list-style: none;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 1rem;
+
+    &-group {
+      margin-top: 1rem;
+      border-radius: rem(5);
+      padding: rem(20) rem(24);
+      background: var(--color-white);
+      box-shadow: 0px 2px 10px -2px var(--card-shadow-color);
+
+      @include desktop-sm {
+        display: none;
+      }
+    }
 
     &--desktop {
       display: none;
@@ -141,7 +146,7 @@
       }
 
       &:hover {
-        color: var(--color-grayish-blue-800);
+        color: var(--filter-hover-color);
       }
     }
   }
@@ -169,6 +174,8 @@
   }
 
   .input {
+    background: var(--card-background-color);
+
     width: 100%;
     padding: rem(20) rem(24);
     padding-left: rem(70);
@@ -178,7 +185,7 @@
     font-weight: 400;
 
     &::placeholder {
-      color: var(--color-grayish-blue-400);
+      color: var(--placeholder-color);
       font-weight: 400;
     }
   }
@@ -191,6 +198,6 @@
     width: rem(25);
     height: rem(25);
     border-radius: 50%;
-    border: 1px solid var(--color-grayish-blue-300);
+    border: 1px solid var(--color-gray-300);
   }
 }
