fix: adjust color item checked

--- a/src/app/modules/todo/todo.component.scss
+++ b/src/app/modules/todo/todo.component.scss
@@ -63,7 +63,7 @@
 
     .item-completed {
       text-decoration: line-through;
-      color: var(--item-checked);
+      color: var(--item-completed);
     }
   }
 
