--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,7 +46,7 @@
   --card-border-color: hsl(237, 14%, 26%);
   --card-shadow-color: rgb(14, 14, 14);
 
-  --item-checked: hsl(233, 14%, 35%);
+  --item-completed: hsl(233, 14%, 35%);
 
   --background-desktop: url('./assets/images/bg-desktop-dark.jpg');
   --background-mobile: url('./assets/images/bg-mobile-dark.jpg');
