feat: add clear completed todo

--- a/src/app/modules/todo/todo.component.html
+++ b/src/app/modules/todo/todo.component.html
@@ -74,7 +74,9 @@
             </button>
           </li>
         </ul>
-        <button class="todo__clear" type="button">Clear Completed</button>
+        <button class="todo__clear" type="button" (click)="clearCompleted()">
+          Clear Completed
+        </button>
       </div>
     </div>
 
