--- a/src/app/modules/todo/todo.component.scss
+++ b/src/app/modules/todo/todo.component.scss
@@ -22,9 +22,10 @@
     border: none;
 
     &__icon {
-      background: var(--icon-theme) no-repeat;
-      width: rem(30);
-      height: rem(30);
+      background: var(--icon-theme) no-repeat center center;
+      background-size: rem(24);
+      width: rem(40);
+      height: rem(40);
     }
   }
 }
@@ -87,6 +88,11 @@
     font-size: 0;
     transition: all 0.2s;
 
+    img {
+      width: rem(14);
+      height: rem(14);
+    }
+
     @include desktop-sm {
       display: none;
     }
@@ -100,6 +106,7 @@
     padding: rem(20) rem(24);
     font-size: rem(14);
     color: var(--filter-text-color);
+    font-size: rem(12);
 
     display: flex;
     align-items: center;
@@ -110,13 +117,16 @@
     background: none;
     border: none;
 
-    color: var(--color-grayish-blue-400);
-    font-size: rem(14);
+    color: var(--filter-text-color);
     font-weight: 400;
     transition: all 0.3s;
 
     &:hover {
       color: var(--filter-hover-color);
+    }
+
+    @include desktop-sm {
+      font-size: rem(12);
     }
   }
 
@@ -150,17 +160,21 @@
     button {
       border: none;
       background: none;
-      color: var(--color-grayish-blue-400);
+      color: var(--filter-text-color);
       font-weight: 700;
       transition: all 0.3s;
-      font-size: rem(14);
+      font-size: rem(12);
 
       &.active {
         color: var(--color-primary);
       }
 
       &:hover {
-        color: var(--filter-hover-color);
+        color: var(--color-primary);
+
+        @include desktop-sm {
+          color: var(--filter-hover-color);
+        }
       }
     }
   }
@@ -170,7 +184,7 @@
 
 .form {
   position: relative;
-  margin-top: rem(64);
+  margin-top: rem(24);
 
   @include desktop-sm {
     width: 50%;
@@ -186,12 +200,12 @@
     padding-left: rem(70);
     border: none;
     border-radius: rem(5);
-    font-size: 1rem;
     font-weight: 400;
 
     &::placeholder {
       color: var(--placeholder-color);
       font-weight: 400;
+      font-size: 1em;
     }
   }
 
