feat: add footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
 <main>
   <router-outlet></router-outlet>
+  <footer>
+    Challenge by&#160;
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
+      Frontend Mentor</a
+    >. Coded by&#160;
+    <a
+      href="https://github.com/rafashiga/frontendmentor-todo-app"
+      target="_blank"
+    >
+      Rafael Shiga</a
+    >.
+  </footer>
 </main>
