--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,5 @@
 footer {
-  display: flex;
-  justify-content: center;
-  padding-bottom: 1rem;
+  text-align: center;
   font-size: 0.875rem;
 
   a {
