--- a/src/app/modules/todo/todo.component.scss
+++ b/src/app/modules/todo/todo.component.scss
@@ -141,7 +141,7 @@
       margin-top: 1rem;
       border-radius: rem(5);
       padding: rem(20) rem(24);
-      background: var(--color-white);
+      background: var(--card-background-color);
       box-shadow: 0px 2px 10px -2px var(--card-shadow-color);
 
       @include desktop-sm {
