--- a/src/app/modules/todo/todo.component.scss
+++ b/src/app/modules/todo/todo.component.scss
@@ -44,6 +44,14 @@
     background-image: var(--background-desktop);
   }
 
+  button {
+    font-size: rem(16);
+
+    @include desktop-sm {
+      font-size: rem(12);
+    }
+  }
+
   &__card {
     background: var(--card-background-color);
     margin-top: rem(24);
@@ -104,13 +112,16 @@
 
   &__info {
     padding: rem(20) rem(24);
-    font-size: rem(14);
+    font-size: rem(16);
     color: var(--filter-text-color);
-    font-size: rem(12);
 
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @include desktop-sm {
+      font-size: rem(12);
+    }
   }
 
   &__clear {
@@ -123,10 +134,6 @@
 
     &:hover {
       color: var(--filter-hover-color);
-    }
-
-    @include desktop-sm {
-      font-size: rem(12);
     }
   }
 
@@ -163,7 +170,6 @@
       color: var(--filter-text-color);
       font-weight: 700;
       transition: all 0.3s;
-      font-size: rem(12);
 
       &.active {
         color: var(--color-primary);
