feat: add input text color

--- a/src/app/modules/todo/todo.component.scss
+++ b/src/app/modules/todo/todo.component.scss
@@ -208,6 +208,8 @@
     border-radius: rem(5);
     font-weight: 400;
 
+    color: var(--text-color);
+
     &::placeholder {
       color: var(--placeholder-color);
       font-weight: 400;
