--- a/src/app/modules/todo/todo.component.scss
+++ b/src/app/modules/todo/todo.component.scss
@@ -228,3 +228,9 @@
     border: 1px solid var(--color-gray-300);
   }
 }
+
+.information {
+  color: var(--filter-text-color);
+  margin-top: 3rem;
+  text-align: center;
+}
