feat: add footer style

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,10 @@
 footer {
   text-align: center;
-  font-size: 0.875rem;
+  font-size: 14px;
+  padding-bottom: 0.75rem;
 
   a {
+    font-size: 14px;
     color: var(--color-primary);
     transition: all 0.3s;
 
