feat: add outline input checkbox focus

--- a/src/app/shared/checkbox/checkbox.component.scss
+++ b/src/app/shared/checkbox/checkbox.component.scss
@@ -15,6 +15,10 @@
     width: 0;
   }
 
+  input:focus + .checkmark {
+    outline: auto;
+  }
+
   /* Create a custom checkbox */
   .checkmark {
     position: absolute;
