fix: adjust acessbility delete button

--- a/src/app/modules/todo/todo.component.scss
+++ b/src/app/modules/todo/todo.component.scss
@@ -102,12 +102,20 @@
     }
 
     @include desktop-sm {
-      display: none;
+      img {
+        display: none;
+      }
+
+      &:focus img {
+        display: initial;
+      }
     }
   }
 
   &__item:hover &__delete {
-    display: initial;
+    img {
+      display: initial;
+    }
   }
 
   &__info {
